--- a/pug/parts/_popup_menu.pug
+++ b/pug/parts/_popup_menu.pug
@@ -29,7 +29,8 @@ section(modal="menu")
                     li: a(href="articles.html") Статьи
                     li: a(href="jobs.html") Биржа труда
                     li: a(href="https://shop-mskr.ru") Интернет магазин
-            li: a(href="contacts.html") Контакты
+            li
+                a(href="contacts.html") Контакты
             li.online
                 a(href="https://mskr-online.ru")
                     include ../../images/online.svg
