--- a/pug/teachers.pug
+++ b/pug/teachers.pug
@@ -13,9 +13,9 @@ section.page.teachers
         div.header
             h2 Преподаватели академии
         div.list
-            -for( i=1; i<=12 ; i++ )
+            -for( i=1; i<=7 ; i++ )
                 div.card
-                    div(style="background-image: url('images/team.webp')").preview
+                    div(style="background-image: url('images/teachers/" + i + ".webp')").preview
                     div.content
                         span Специалист по массажу
                         strong Дорохова Елена Николаевна
