--- a/css/style.css
+++ b/css/style.css
@@ -888,6 +888,9 @@ section.question .wrap .image img {
   top: var(--four-padding);
   left: 0;
   width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 section.question .wrap .form {
   -ms-flex-preferred-size: 50%;
