--- a/pug/parts/_teachers.pug
+++ b/pug/parts/_teachers.pug
@@ -9,9 +9,9 @@ section.teachers
         div(class="carousel_wrap")
             include ../../images/gallery_left.svg
             div(target-modal="teacher").list.carousel
-                -for( i=1; i<=12 ; i++ )
+                -for( i=1; i<=7 ; i++ )
                     div.card.linked
-                        div(style="background-image: url('images/team.webp')").preview
+                        div(style="background-image: url('images/teachers/" + i + ".webp')").preview
                         div.content
                             span Специалист по массажу
                             strong Дорохова Елена Николаевна
