--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,7 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=El+Messiri:wght@700&display=swap')
 @import 'variables'
 
-
 *
     margin: 0
     padding: 0
@@ -578,6 +577,8 @@ section.question
                 top: var(--four-padding)
                 left: 0
                 width: 100%
+                height: 100%
+                object-fit: contain
         .form
             flex-basis: 50%
             padding: var(--six-padding) 0
@@ -1213,8 +1214,6 @@ section.course_documents
             flex-basis: 50%
             img
                 width: 100%
-
-
 
 @import 'elements'
 @import 'modal'
